course details, not finished #5

--- a/www/courses.html
+++ b/www/courses.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://localhost:8001 https://fonts.gstatic.com https://code.jquery.com 'self' https://classvrroomapi.herokuapp.com/ data: https://musicbrainz.org gap: https://ssl.gstatic.com 'unsafe-eval'; media-src *; style-src 'self' https://fonts.googleapis.com 'unsafe-inline' 'self' https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css 'self' https://fonts.googleapis.com/icon?family=Material+Icons 'self' https://fonts.googleapis.com/css?family=Varela+Round&display=swap; script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js 'self' js/index.js">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://localhost:8001 https://fonts.gstatic.com https://code.jquery.com 'self' https://classvrroomapi.herokuapp.com/ data: https://musicbrainz.org gap: https://ssl.gstatic.com 'unsafe-eval'; media-src *; style-src 'self' https://fonts.googleapis.com 'unsafe-inline' 'self' https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css 'self' https://fonts.googleapis.com ; script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js 'self' js/index.js">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Courses</title>
 </head>
 <body>
    <ul id="courses" class="collapsible"></ul>
@@ -19,5 +19,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src= "js/materialize.js"></script>
     <script type="text/javascript" src="js/courses.js"></script>
+
 </body>
 </html>
