--- a/www/courses.html
+++ b/www/courses.html
@@ -31,7 +31,7 @@
  
       </ul>
     </div>
-    <div id="courseDet" class="col s12"> <ul id="det" class="collection"> </ul></div>
+    <div id="courseDet" class="col s12"> <ul id="det" class="collapsible"> </ul></div>
     <div id="courses" class="col s12">  <ul id="course" class="collapsible"> </ul> </div>
 
   </div>
