--- a/www/test.html
+++ b/www/test.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TITULO</h1>
-    <p>descripcion</p>
+
+    <ul class="collection">
+        <li class="collection-item"><table class="right"> <tbody> <tr> <td>Passed  Items: </td> </tr> <tr><td>Failed Items: </td> </tr> </tbody> </table></li>
+      </ul>
 </body>
 </html>
