--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
               <div class="row">
                 <div class="input-field col s12">
                   <i class="large material-icons icon_blue prefix">insert_link</i>
-                  <input id="urlIn" type="text" class="validate" placeholder="Url">
+                  <input id="urlIn" type="text" class="validate" placeholder="Url"></input>
                 </div>
               </div>
               <div class="row">
